--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
             <div class="row">
               <div class="col-lg-6" style="color: black">
                 <p class="display-3">NHAN LE</p>
-                <p class="line-1 anim-typewriter">Student | Developer | Thinker | Guitarist</p>
+                <p class="line-1 anim-typewriter">Student | Developer | Backpacker</p>
                 <a href="#portfolio-section" class="btn smoothscroll btn-primary mt-4">Portfolio</a>
+                <a href="/assets/SWE Resume.pdf" class="btn btn-primary ml-4 mt-4">Resume</a>
               </div>
             </div>
           </div>
