--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 <p class="display-3">NHAN LE</p>
                 <p class="line-1 anim-typewriter">Student | Developer | Backpacker</p>
                 <a href="#portfolio-section" class="btn smoothscroll btn-primary mt-4">Portfolio</a>
-                <a href="/assets/SWE Resume.pdf" class="btn btn-primary ml-4 mt-4">Resume</a>
+                <a href="https://nle1.github.io/portfolio/assets/SWE%20Resume.pdf"
+                  class="btn btn-primary ml-4 mt-4">Resume</a>
               </div>
             </div>
           </div>
