--- a/index.html
+++ b/index.html
@@ -248,6 +248,12 @@
               <img class="demo-img" src="images/tabtracker.png">
             </a>
           </div>
+          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+            <a href="https://github.com/NLe1/EzWOEID" class="item-wrap fancybox">
+              <span>EzWOEID</span>
+              <img class="demo-img" src="images/ezwoeid.png">
+            </a>
+          </div>
         </div>
       </div>
 
