--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </a>
           </div>
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
-            <a href="https://github.com/NLe1/EzWOEID" class="item-wrap fancybox">
+            <a href="https://ezwoeid.herokuapp.com/" class="item-wrap fancybox">
               <span>EzWOEID</span>
               <img class="demo-img" src="images/ezwoeid.png">
             </a>
@@ -259,7 +259,7 @@
 
     </section>
 
-    <!-- 
+    <!-- i
     <section class="site-section bg-dark">
       <div class="container">
         <div class="row">
