--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p class="display-3">NHAN LE</p>
                 <p class="line-1 anim-typewriter">Student | Developer | Backpacker</p>
                 <a href="#portfolio-section" class="btn smoothscroll btn-primary mt-4">Portfolio</a>
-                <a href="https://nle1.github.io/portfolio/assets/SWE%20Resume.pdf"
+                <a href="https://www.dropbox.com/s/2ppsv3yxaqo3ia7/SWE%20Resume.pdf?dl=0"
                   class="btn btn-primary ml-4 mt-4">Resume</a>
               </div>
             </div>
