add blog button

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <a href="#portfolio-section" class="btn smoothscroll btn-primary mt-4">Portfolio</a>
                 <a href="https://www.dropbox.com/s/2ppsv3yxaqo3ia7/SWE%20Resume.pdf?dl=0"
                   class="btn btn-primary ml-4 mt-4">Resume</a>
+                <a href="https://nle1.github.io/" class="btn btn-primary ml-4 mt-4">Visit my blog!</a>
               </div>
             </div>
           </div>
